--- a/Web/nepal.css
+++ b/Web/nepal.css
@@ -21,7 +21,7 @@ body {
 /* Header Styles */
 header {
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), 
-                url('./Images/pngtree-the-himalayas-in-nepal-image_15927109.jpg');
+                url('https://parallel-gertruda-wizardzz-fb37ac55.koyeb.app/Images/pngtree-the-himalayas-in-nepal-image_15927109.jpg');
     background-size: cover;
     background-position: center;
     height: 100vh;
